--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,12 +6,10 @@
 <p class="date">
   Submitted <%= time_ago_in_words(@post.created_at) %> Ago
   | <%= link_to 'Edit', edit_post_path(@post)%>
+  | <%= link_to 'Delete', post_path(@post), method: :delete, data: {confirm: 'Are you sure?'} %>
 </p>
 
 <p class="body">
   <%= @post.body %>
 </p>
 </div>
-
-
-<!-- Left off at 44:21 on video tutorial -->
