--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,6 +6,7 @@
   <div id="content">
     <h1>Hi, I'm Jeannette D.</h1>
     <p>Welcome to my rails blog project</p>
+    <p>This was a fun blog to build with so many features.</p>
   </div>
 
 </div>
