--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
+<div id="page_wrapper">
 <!DOCTYPE html>
+
 <html>
   <head>
-    <title>BlogNew</title>
+    <title>BlogNew1</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -26,6 +28,15 @@
         <li><a href="https://github.com/JeannetteD"></a>Github</li>
         <li><a href="https://www.linkedin.com/in/jeannette-dariano"></a>LinkedIn</li>
       </ul>
+      <ul>
+        <li class="category">Sign Up</li>
+        <li><%= link_to "Sign Up", new_user_registration_path %></li>
+      </ul>
+      <ul>
+        <li class="category">Sign In</li>
+        <li><%= link_to "Sign In", new_user_session_path %></li>
+      </ul>
+
 
       <% if !user_signed_in? %>
       <p class="sign_in">Admin Login</p>
@@ -34,7 +45,7 @@
 
 
     <div id="main_content">
-      <div id="header">
+		<div id="header">
 			<% if current_page?(root_path) %>
 				<p>All Posts</p>
 			<% elsif current_page?(about_path) %>
@@ -42,18 +53,23 @@
 			<% else %>
 				<%= link_to "Back to All Posts", root_path %>
 			<% end %>
-        <% if user_signed_in?%>
-        <div class="buttons">
-          <button class="button"><%= link_to "New Post", new_post_path %></button>
-          <button class="button">Log Out</button>
-        </div>
-        <% end %>
-      </div>
-      <% flash.each do |name, msg| %>
-        <%= content_tag(:div, msg, class: "alert") %>
-      <% end %>
-          <%= yield %>
-    </div>
+
+			<% if user_signed_in? %>
+				<div class="buttons">
+					<button class="button"><%= link_to "New Post", new_post_path %></button>
+					<button class="button"><%= link_to "Log Out", destroy_user_session_path, :method => :delete %></button>
+
+				</div>
+			<% end %>
+		</div>
+
+		<% flash.each do |name, msg| %>
+			<%= content_tag(:div, msg, class: "alert") %>
+		<% end %>
+
+		<%= yield %>
+	</div>
 
   </body>
+  </div>
 </html>
